[project]
name = "can-logger"
version = "0.1.0"
description = ""
authors = [
    {name = "Juliusz Tarnowski",email = "juliusz.stanislaw.tarnowski@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"

packages = [
  { include = "can_logger" },
]

[tool.poetry.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

