[project]
name = "can-logger"
version = "0.1.0"
description = ""
authors = [
    {name = "Juliusz Tarnowski",email = "juliusz.stanislaw.tarnowski@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"

packages = [
  { include = "can_logger" },
  { include = "cfdp_server" },
]

[tool.poetry.dependencies]
black = "^25.1.0"
pytest = "^8.3.5"
cantools = "^40.2.1"
click = "^8.1.8"

[tool.poetry.group.cfdp.dependencies]
spacepackets = "^0.28.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
